--- a/css/style.css
+++ b/css/style.css
@@ -459,7 +459,7 @@ img {
     position: absolute;
     width: 35%;
     transform: scale(1);
-    opacity: 1;
+    /*opacity: 1;*/
     transition: .5s;
 }
 
