Add vite and dist folder for production

--- a/css/style.css
+++ b/css/style.css
@@ -919,6 +919,11 @@ footer form > label {
         width: 100%;
     }
 
+    .main-img {
+        /*object-position: center;*/
+        object-position: top;
+    }
+
     .list-info {
         padding: 0;
     }
