--- a/src/scss/section/_footer.scss
+++ b/src/scss/section/_footer.scss
@@ -70,3 +70,71 @@ footer form {
     margin-top: 2em; /* 30 / 15 */
   }
 }
+
+@media screen and (width > $med_screen) {
+  .footer__nav {
+
+    & > h3 {
+      margin-bottom: 30px;
+    }
+
+    &__list {
+      flex-direction: row;
+      justify-content: center;
+      margin-bottom: 40px;
+
+      & a {
+        padding: 0 25px;
+      }
+    }
+  }
+}
+
+@media screen and (width > $wide_screen) {
+  .footer__nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 60px 15px 40px 15px;
+    justify-content: space-between;
+
+    & > h3 {
+      margin: 0;
+      flex-shrink: 0;
+    }
+
+    &__list {
+      margin: 0;
+      width: 60%;
+      justify-content: space-between;
+
+      & > li > a {
+        padding: 0;
+      }
+    }
+  }
+
+  .social__list {
+    margin: 0;
+    width: auto;
+  }
+
+  footer form {
+    text-align: left;
+  }
+
+  .footer {
+    padding: 50px 15px;
+
+    & > li:last-child {
+      width: 40%;
+    }
+  }
+}
+
+@media screen and (width > $wider_screen) {
+  .footer__nav {
+    padding-top: 80px;
+    padding-bottom: 70px;
+  }
+}
