--- a/src/scss/section/_opinion.scss
+++ b/src/scss/section/_opinion.scss
@@ -1,7 +1,7 @@
 @import '../var';
 
 .opinion {
-  background-image: url("../../img/opinion-background.webp");
+  background-image: url("/img/opinion-background.webp");
   background-position: 100% 100%;
   background-size: cover;
   background-repeat: no-repeat;
