--- a/src/scss/section/_footer-contact.scss
+++ b/src/scss/section/_footer-contact.scss
@@ -3,6 +3,10 @@
 .footer__contact {
   padding-top: 0;
 
+  & > div {
+    width: 100%;
+  }
+
   & h3 {
     font-size: 32px;
     width: 10em;
@@ -17,7 +21,7 @@
     border: 1px solid $gray;
     border-radius: 7px;
     row-gap: 20px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../../../img/map.webp");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("/img/map.webp");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
