--- a/src/scss/section/_hero.scss
+++ b/src/scss/section/_hero.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: linear-gradient(rgba(0, 0, 0, .55), rgba(0, 0, 0, .55)), url("../../../img/hero-background.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, .55), rgba(0, 0, 0, .55)), url("/img/hero-background.jpg");
   background-position: 0 0, 50%;
   background-size: auto, cover;
   background-attachment: fixed;
