--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -113,7 +113,6 @@ header {
   }
 }
 
-
 /* BURGER MENU */
 input[id="burger__toggle"] {
   appearance: none;
@@ -126,7 +125,7 @@ input[id="burger__toggle"] {
   z-index: 3;
 
   &:checked,
-  &:checked + .burger__wrapper {
+  &:checked ~ .burger__wrapper {
     //background-color: red;
     position: fixed;
     right: 15px;
@@ -136,19 +135,19 @@ input[id="burger__toggle"] {
     transform: translateX(0);
   }
 
-  &:checked + .burger__wrapper span:nth-child(2) {
+  &:checked ~ .burger__wrapper span:nth-child(2) {
     min-height: 0;
   }
 
-  &:checked + .burger__wrapper span:nth-child(1) {
+  &:checked ~ .burger__wrapper span:nth-child(1) {
     transform: translate(0, 6px) rotate(45deg);
 
   }
 
-  &:checked + .burger__wrapper span:nth-child(3) {
+  &:checked ~ .burger__wrapper span:nth-child(3) {
     transform: translate(0, -6px) rotate(-45deg);
-
   }
+
 }
 
 .burger__wrapper {
@@ -249,8 +248,6 @@ input[id="burger__toggle"] {
         background-color: $light_gray;
       }
     }
-
-
   }
 
   input[id="burger__toggle"],
